--- a/tugas-02/index.html
+++ b/tugas-02/index.html
@@ -1,31 +1,25 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tugas 2</title>
+    <link rel="stylesheet" href="public/assets/css/style.css">
+    <title>Biodata Diri</title>
 </head>
 <body>
-<h4>Biodata Diri</h4>
-    <pre>
-        Nama lengkap: Fanul Nastia
-        Foto:
-        NIM: 2108107010029
-        Jurusan: Informatika
-        Fakultas: MIPA
-        Universitas: Universitas Syiah Kuala
-    </pre>
-    <h4>Jadwal Kuliah</h4>
-    <pre>
+    <!-- Header -->
+    <header>DAFTAR MATA KULIAH SAYA</header>
+    <!-- Akhir Header -->
+    <!-- Tabel Mata Kuliah -->
+    <div class="container">
         <table>
-        <table border="1px">
             <tr>
-                <td>Nama Mata Kuliah</td>
-                <td>SKS</td>
-                <td>Dosen Pengampu</td>
-                <td>Ruangan</td>
-                <td>Waktu & hari</td>
+                <th>Nama Mata Kuliah</th>
+                <th>SKS</th>
+                <th>Dosen Pengampu</th>
+                <th>Ruangan</th>
+                <th>Waktu & hari</th>
             </tr>
             <tr>
                 <td>Struktur Data dan Algoritma</td>
@@ -56,11 +50,11 @@
                 <td>08.15-09.55 & Rabu</td>
             </tr>
             <tr>
-                <td>Pemograman Berbasis Web</td>
-                <td>3</td>
+                <td>Etika Teknologi Informasi</td>
+                <td>2</td>
                 <td>Husaini, M.Sc</td>
                 <td>E.03.02</td>
-                <td>14.00-15.40 & Kamis</td>
+                <td>08.15-09.55 & Rabu</td>
             </tr>
             <tr>
                 <td>Rekayasa Perangkat Lunak</td>
@@ -84,7 +78,23 @@
                 <td>08.15-09.55 & Rabu</td>
             </tr>
         </table>
-    </pre>
-   
+        <!--  Akhir Tabel -->
+        <!-- Awal Biodata -->
+        <div class="card-profile">
+            <h2>Informasi Personal</h2>
+            <img src="public/assets/img/foto.jpg" alt="">
+            <div class="content">
+                
+                <p><b>Nama</b> : Fanul Nastia</p>
+                <p><b>NIM</b> : 2108107010029</p>
+                <p><b>Jurusan</b> : Informatika</p>
+                <P><b>Fakultas</b> : MIPA</P>
+                <P><b>Universitas</b> : Universitas Syiah Kuala</P>
+            </div>
+        </div>
+        <!-- Akhir Biodata -->
+    </div>
+    <footer>© Made By Fanul Nastia</footer>
 </body>
+
 </html>
